[gd_scene load_steps=8 format=3 uid="uid://dm53ffflcirso"]

[ext_resource type="Script" path="res://crack.gd" id="1_mk88c"]
[ext_resource type="Texture2D" uid="uid://ltgc084o5xjp" path="res://Assets/Sunny-land-assets-files/PNG/environment/props/crank-up.png" id="1_uyos5"]
[ext_resource type="Texture2D" uid="uid://ccak62onnq0aa" path="res://Assets/Sunny-land-assets-files/PNG/environment/props/crank-down.png" id="2_10ydc"]
[ext_resource type="AudioStream" uid="uid://chmb3slntnist" path="res://Assets/sounds/switch2.ogg" id="4_wxvcv"]
[ext_resource type="FontFile" uid="uid://yyu5uuho8n23" path="res://Assets/fonts/Caprasimo-Regular.ttf" id="5_0fsmw"]

[sub_resource type="SpriteFrames" id="SpriteFrames_jutem"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_uyos5")
}],
"loop": true,
"name": &"carck_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_10ydc")
}],
"loop": true,
"name": &"crack_down",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1l17y"]
size = Vector2(18, 10)

[node name="crack" type="Node2D"]
script = ExtResource("1_mk88c")

[node name="AnimatedCrack" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jutem")
animation = &"carck_up"

[node name="crackzone" type="Area2D" parent="."]
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="crackzone"]
visible = false
position = Vector2(2, 3)
shape = SubResource("RectangleShape2D_1l17y")
debug_color = Color(0.976471, 0.6, 0.701961, 0.419608)

[node name="crackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_wxvcv")

[node name="Label" type="Label" parent="."]
offset_left = -3.0
offset_top = -28.0
offset_right = 21.0
offset_bottom = -5.0
theme_override_colors/font_color = Color(0.2, 0.913725, 0.172549, 1)
theme_override_fonts/font = ExtResource("5_0fsmw")
theme_override_font_sizes/font_size = 12
text = "Key"

[connection signal="body_entered" from="crackzone" to="." method="_on_crackzone_body_entered"]
